eliminacion de esquema como clase
ahora configuracion tiene los datos de esquema + horario correspondiente. tambien los cambios necesarios en las tablas (en bd_tables)